ChipHaiFamily/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: chiphaifamily-backend-service
  namespace: chiphaifamily-app
spec:
  type: ClusterIP
  selector:
    app: chiphaifamily-backend
  ports:
    - port: 8080
      targetPort: 8080


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: chiphaifamily-backend-deployment
  namespace: chiphaifamily-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chiphaifamily-backend
  template:
    metadata:
      labels:
        app: chiphaifamily-backend
    spec:
      containers:
        - name: chiphaifamily-backend
          image: kbtr/apartment-backend:20971d726086b55961a82679259c0d4f57e39d15
          ports:
            - containerPort: 8080
