ChipHaiFamily/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: chiphaifamily-frontend-service
  namespace: chiphaifamily-app
spec:
  selector:
    app: chiphaifamily-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chiphaifamily-frontend-deployment
  namespace: chiphaifamily-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chiphaifamily-frontend
  template:
    metadata:
      labels:
        app: chiphaifamily-frontend
    spec:
      containers:
        - name: chiphaifamily-frontend
          image: kbtr/apartment-frontend:3645a977c823a4b029ead539b69f3da300036e8b
          ports:
            - containerPort: 80
